--- a/src/main/webapp/writePost.css
+++ b/src/main/webapp/writePost.css
@@ -8,23 +8,18 @@
 	border-color: #dcdcdc;
 	border-radius: 20px;
 }
-.board-table{
-	background-color:white;
-	border: 2px solid;
-	border-color: grey;
-	width: 100%
-}
-.board-tr{
-	background-color:  #AADBFF;
-	font-weight: bold;
-}
-
-.rightButton{
+.right-btn{
 	text-align: right;
 }
+.back-btn{
+	background-color: #CDECFA;
+	border-radius: 5px;
+}
+.writer{
+	
+}
 .write-form{
-	border: 2px solid;
-	border-color: grey;
+	
 }
 .write-title{
 	width: 100%;
@@ -33,4 +28,8 @@
 .write-content{
 	width: 100%;
 	height: 300px;
+}
+.submit-btn{
+	background-color: #CDECFA;
+	border-radius: 5px;
 }
